🔒️ OpenAPI extension is able to parse presentation definitions to build policies